tests/error/type_match/base_case_rvalue_to_lvalue_ref2.bz
function test()
{
	let _: &const auto = 0i32;
}
